--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,15 +3,16 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  test:
 
     runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: test
+      run: ./gradlew test
+  build:
+    runs-on: [self-hosted]
+    steps:
+      - name: build
+        run: ./gradlew build
